# platform.core.uifw.inputmethod-setting

./: AUTHORS  CMakeLists.txt  org.tizen.input-method-setting.xml  org.tizen.inputmethod-setting.xml
im_setting_list/: CMakeLists.txt  input_method_setting_list.cpp  input_method_setting_list.h  input_method_setting_list_popup_view.cpp  input_method_setting_list_popup_view.h  input_method_setting_list_ui.cpp  input_method_setting_list_ui.h
im_setting_selector/: CMakeLists.txt  input_method_setting_selector.cpp  input_method_setting_selector.h  input_method_setting_selector_ui.cpp  input_method_setting_selector_ui.h
packaging/: org.tizen.input-method-setting.spec  org.tizen.inputmethod-setting.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  input-method-setting.pot  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  (+46 more)
