CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(inputmethod-setting CXX)

SET(HEADERS)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION 1.0)

SET(PACKAGE ${PROJECT_NAME})
SET(PKGNAME "org.tizen.${PACKAGE}")
SET(PKGDIR "${PREFIX}/apps/${PKGNAME}")
SET(BINDIR "${PKGDIR}/bin")
SET(RESDIR "${PKGDIR}/res")
SET(ICONDIR "${TZ_SYS_RO_ICONS}/default/small")
SET(LOCALEDIR "${RESDIR}/locale")

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
#MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
capi-appfw-application isf elementary
efl-extension dlog
)

FOREACH(flag ${pkgs_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
    SET(EXTRA_CXXFLAGS "${EXTRA_CXXFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -fPIE")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXXFLAGS} -Wall -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wall -fPIE")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall -fPIE")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fPIE")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -g -fPIE")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DPACKAGE_NAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE RENAME ${PKGNAME} DESTINATION ${PREFIX}/share/license)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/${PKGNAME}.xml DESTINATION ${TZ_SYS_RO_PACKAGES})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/${PKGNAME}-list.png DESTINATION ${ICONDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/${PKGNAME}-selector.png DESTINATION ${ICONDIR})

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/im_setting_list)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/im_setting_selector)
ADD_SUBDIRECTORY(po)
